variant calling with lofreq added

--- a/conf/illumina.config
+++ b/conf/illumina.config
@@ -31,6 +31,15 @@ params {
 
     // iVar minimum mapQ to call variant (ivar variants: -q)
     ivarMinVariantQuality = 20
+    
+    // lofreq minimum base quality to call variant (lofreq call: --min-bq)
+    lofreqMinBaseQuality = 10
+
+    // lofreq minimum mapQ to call variant (lofreq call: --min-mq)
+    lofreqMinMapQuality = 20
+
+    //// lofreq minimum coverage to call variant (lofreq call: --min-cov)
+    lofreqMinCov = 1
 
 }
 
