monkeypatch for relative import

--- a/conf/illumina.config
+++ b/conf/illumina.config
@@ -1,6 +1,11 @@
 // Illumina specific params
 
 params {
+    // Repo to download your artic scripts from
+    scriptsRepoURL = 'https://github.com/artic-network/fieldbioinformatics.git'
+
+    // Directory within scriptsRepoURL that contains scripts
+    scriptsDir = 'artic'
 
     // illumina fastq search path
     illuminaSuffixes = ['*_R{1,2}_001', '*_R{1,2}', '*_{1,2}' ]
@@ -38,8 +43,11 @@ params {
     // lofreq minimum mapQ to call variant (lofreq call: --min-mq)
     lofreqMinMapQuality = 20
 
-    //// lofreq minimum coverage to call variant (lofreq call: --min-cov)
+    // lofreq minimum coverage to call variant (lofreq call: --min-cov)
     lofreqMinCov = 1
+
+    // coverage threshold below which bases are set to N (make_depth_mask.py --depth)
+    minDepthThreshold = 20
 
 }
 
