attempt to add an aws configure

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
 
   // cache option makes it a bit easier to set conda or singularity cacheDir
   cache = ''
+  container = 'lichenhao/ncov2019-artic-nf'
 }
 
 // Load base.config by default for all pipelines
@@ -67,6 +68,10 @@ profiles {
   gls {
     process.executor = 'google-lifesciences'
     includeConfig 'conf/gls.config'
+  }
+  awsbatch {
+    includeConfig 'conf/awsbatch.config'
+    process.container = params.container
   }
 }
 
