--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -17,6 +17,9 @@ aws {
 }
 
 process {
-    executor = 'awsbatch'
+    executor = 'local'
+    withName:"artic.*"{
+	executor = 'awsbatch'
+    }
     queue = params.awsqueue
 }
