--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params {
   // cache option makes it a bit easier to set conda or singularity cacheDir
   cache = ''
   container = 'lichenhao/ncov2019-artic-nf'
+  barcodes = false
 }
 
 // Load base.config by default for all pipelines
@@ -40,9 +41,9 @@ profiles {
      }
   }
   docker {
+    process.container = params.container
     docker.enabled = true
-    fixOwnership = true
-    runOptions = "-u \$(id -u):\$(id -g)"
+    docker.runOptions='-u $(id -u):$(id -g)'
   }
   singularity {
     singularity.enabled = true 
