--- a/nextflow.config
+++ b/nextflow.config
@@ -10,12 +10,13 @@ params {
 
   // cache option makes it a bit easier to set conda or singularity cacheDir
   cache = ''
-  container = 'lichenhao/ncov2019-artic-nf'
 }
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
+// Load CSB5 config
+includeConfig 'conf/csb5.config'
 
 if ( params.medaka || params.nanopolish ){
     includeConfig 'conf/nanopore.config'
@@ -40,9 +41,9 @@ profiles {
      }
   }
   docker {
-    process.container = params.container
     docker.enabled = true
-    docker.runOptions='-u $(id -u):$(id -g)'
+    fixOwnership = true
+    runOptions = "-u \$(id -u):\$(id -g)"
   }
   singularity {
     singularity.enabled = true 
@@ -82,19 +83,19 @@ includeConfig 'conf/coguk.config'
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
-  enabled = false
+  enabled = true
   file = "${params.tracedir}/execution_timeline.html"
 }
 report {
-  enabled = false
+  enabled = true
   file = "${params.tracedir}/execution_report.html"
 }
 trace {
-  enabled = false
+  enabled = true
   file = "${params.tracedir}/execution_trace.txt"
 }
 dag {
-  enabled = false
+  enabled = true
   file = "${params.tracedir}/pipeline_dag.svg"
 }
 
