allow local primer scheme

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -17,9 +17,16 @@ aws {
 }
 
 process {
-    cpu = 2
+    cpus = 2
     executor = 'local'
-    withName:"artic.*"{
+    withName:"artic.*RemoveUnmappedReads|artic.*GuppyPlex"{
+        cpus = 1
+	memory = 2.GB
+	executor = 'awsbatch'
+    }
+    withName:"artic.*MinIONMedaka"{
+        cpus = 4
+	memory = 4.GB
 	executor = 'awsbatch'
     }
     queue = params.awsqueue
