--- a/nextflow.config
+++ b/nextflow.config
@@ -74,6 +74,9 @@ profiles {
     includeConfig 'conf/awsbatch.config'
     process.container = params.container
   }
+  longamp {
+    includeConfig 'conf/longamp.config'
+  }
 }
 
 // COG-UK institutional config
