remove primer scheme downloading step.

--- a/conf/longamp.config
+++ b/conf/longamp.config
@@ -1,7 +1,7 @@
 params {
        container = 'lichenhao/ncov2019-artic-nf'
        schemeVersion = 'V1'
-       schemeRepoURL = 'ncov-artic-longamp'
+       schemeRepo = 'ncov-artic-longamp'
        max_length = 3000
        min_length = 2000
 }
