add csb5 as a profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,8 +15,6 @@ params {
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-// Load CSB5 config
-includeConfig 'conf/csb5.config'
 
 if ( params.medaka || params.nanopolish ){
     includeConfig 'conf/nanopore.config'
@@ -73,6 +71,9 @@ profiles {
   awsbatch {
     includeConfig 'conf/awsbatch.config'
     process.container = params.container
+  }
+  csb5 {
+    includeConfig 'conf/csb5.config'
   }
   longamp {
     includeConfig 'conf/longamp.config'
