add container to aws profile

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -17,6 +17,7 @@ aws {
 process {
     cpus = 2
     executor = 'local'
+    container = params.container
     withName:"artic.*RemoveUnmappedReads|artic.*GuppyPlex"{
         cpus = 1
 	memory = 2.GB
