change config order

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -6,6 +6,7 @@
  * Uses docker for software depedencies automagically, so not specified here.
  */
 
+params.tracedir = 'pipeline_info/'
 
 aws {
     region = params.awsregion
