test adding a tower launch config

--- a/conf/longamp.config
+++ b/conf/longamp.config
@@ -1,5 +1,5 @@
 params {
-       container = 'lichenhao/ncov2019-artic-nf'
+       container = 'lichenhao/ncov2019-artic-nf:gis'
        schemeVersion = 'V1'
        schemeRepo = 'ncov-artic-longamp'
        max_length = 3000
