--- a/nextflow.config
+++ b/nextflow.config
@@ -70,6 +70,9 @@ profiles {
   csb5 {
     includeConfig 'conf/csb5.config'
   }
+  tower {
+    includeConfig 'conf/tower.config'
+  }
   awsbatch {
     includeConfig 'conf/awsbatch.config'
     process.container = params.container
