add container parameter

--- a/conf/tower.config
+++ b/conf/tower.config
@@ -1,5 +1,6 @@
 params {
     awsregion = "ap-southeast-1"
     awsqueue = "artic"
+    container = 'lichenhao/ncov2019-artic-nf:gis'
     mail = false
 }
