add scheme repo

--- a/conf/tower.config
+++ b/conf/tower.config
@@ -3,4 +3,6 @@ params {
     awsqueue = "artic"
     container = 'lichenhao/ncov2019-artic-nf:gis'
     mail = false
+    medaka = true
+    schemeRepo = 's3://csb5-nextflow-work/ncov-artic-longamp/'
 }
