--- a/conf/tower.config
+++ b/conf/tower.config
@@ -5,4 +5,8 @@ params {
     mail = false
     medaka = true
     schemeRepo = 's3://csb5-nextflow-work/ncov-artic-longamp/'
+    basecalled_fastq = 's3://csb5-nextflow-work/test_reads'
+    fast5_pass = './'
+    prefix = 'tower_test_run'
+    outdir = 's3://ttsh-nanopore-data/artic_bioinformatics_results/'
 }
