decouple tower config

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -18,7 +18,7 @@ aws {
 process {
     cpus = 2
     executor = 'local'
-    withName:"artic.*RemoveUnmappedReads|artic.*GuppyPlex"{
+    withName:"artic.*RemoveUnmappedReads|artic.*GuppyPlex|artic.*StageScheme"{
         cpus = 1
 	memory = 2.GB
 	executor = 'awsbatch'
