--- a/conf/tower.config
+++ b/conf/tower.config
@@ -1,3 +1,6 @@
+/* Profile configuration used for nf-tower
+   This should not be used together with the 'awsbatch' or 'longamp' profile
+*/
 params {
     awsregion = "ap-southeast-1"
     awsqueue = "artic"
@@ -5,8 +8,36 @@ params {
     mail = false
     medaka = true
     schemeRepo = 's3://csb5-nextflow-work/ncov-artic-longamp/'
+    schemeVersion = 'V1'
+    max_length = 3000
+    min_length = 2000
     basecalled_fastq = 's3://csb5-nextflow-work/test_reads'
     fast5_pass = './'
     prefix = 'tower_test_run'
-    outdir = 's3://ttsh-nanopore-data/artic_bioinformatics_results/'
+    tracedir = 'pipeline_info/'
+    outdir = 's3://ttsh-nanopore-data/artic_bioinformatics_results/test_results'
+    
+}
+
+process {
+    executor = 'awsbatch'
+    
+}
+
+aws {
+    region = params.awsregion
+    batch {
+          cliPath = '/home/ec2-user/miniconda/bin/aws'
+    }
+}
+
+process {
+    cpus = 1
+    memory = 2.GB
+    withName:"artic.*MinIONMedaka"{
+	cpus = 4
+	memory = 4.GB
+    }
+    container = params.container
+    queue = params.awsqueue
 }
