--- a/conf/longamp.config
+++ b/conf/longamp.config
@@ -4,4 +4,6 @@ params {
        schemeRepo = 'ncov-artic-longamp'
        max_length = 3000
        min_length = 2000
+       bwa = false
+       normalise = 500
 }
