--- a/conf/tower.config
+++ b/conf/tower.config
@@ -6,22 +6,15 @@ params {
     awsqueue = "artic"
     container = 'lichenhao/ncov2019-artic-nf:gis'
     mail = false
-    medaka = true
     schemeRepo = 's3://csb5-nextflow-work/ncov-artic-longamp/'
     schemeVersion = 'V1'
+    medaka = true
     max_length = 3000
     min_length = 2000
-    basecalled_fastq = 's3://csb5-nextflow-work/test_reads'
+    bwa = false
+    normalise = 500
     fast5_pass = './'
-    prefix = 'tower_test_run'
     tracedir = 'pipeline_info/'
-    outdir = 's3://ttsh-nanopore-data/artic_bioinformatics_results/test_results'
-    
-}
-
-process {
-    executor = 'awsbatch'
-    
 }
 
 aws {
@@ -34,6 +27,7 @@ aws {
 process {
     cpus = 1
     memory = 2.GB
+    executor = 'awsbatch'
     withName:"artic.*MinIONMedaka"{
 	cpus = 4
 	memory = 4.GB
